--- a/worksheet.html
+++ b/worksheet.html
@@ -398,15 +398,18 @@
         </aside>
 
         <main class="col-12 col-md-8 col-lg-9 col-xl-10">
-          <div class="row g-4">
-            <worksheet-card
-              v-for="w in filteredWorksheets"
-              :key="w.id"
-              :worksheet="w"
-            ></worksheet-card>
-            <div v-if="!filteredWorksheets.length" class="text-center py-5">
-              <p class="lead mb-0">No worksheets match your filters.</p>
-            </div>
+          <div id="worksheetGrid" class="row g-4">
+          </div>
+          <nav
+            id="worksheetPagination"
+            class="d-flex justify-content-center mt-4"
+          ></nav>
+          <div
+            id="noWorksheetsMsg"
+            class="text-center py-5"
+            style="display: none"
+          >
+            <p class="lead mb-0">No worksheets match your filters.</p>
           </div>
         </main>
       </div>
@@ -851,27 +854,162 @@
             selectedWorksheet,
           };
         },
-        components: {
-          "worksheet-card": {
-            props: ["worksheet"],
-            template: `
-            <div class="col-sm-6 col-lg-4 col-xl-3">
-              <a :href="'worksheet-detail.html?id=' + worksheet.id" class="text-decoration-none">
+        mounted() {
+          this.$nextTick(() => {
+            setupWorksheetPagination();
+          });
+        },
+        updated() {
+          this.$nextTick(() => {
+            setupWorksheetPagination();
+          });
+        },
+      }).mount("#app");
+
+      function setupWorksheetPagination() {
+        const pageSize = 16;
+        const grid = document.getElementById("worksheetGrid");
+        const pag = document.getElementById("worksheetPagination");
+        const noMsg = document.getElementById("noWorksheetsMsg");
+        const vueApp = Vue.__app__ || window.__VUE_APP__ || null;
+        let filtered = [];
+        try {
+          filtered =
+            window.__VUE__?.appContext?.app?._instance?.proxy
+              ?.filteredWorksheets ?? [];
+          if (!filtered.length && window.app && window.app.filteredWorksheets) {
+            filtered = window.app.filteredWorksheets;
+          }
+        } catch {}
+        if (!filtered.length && document.getElementById("app").__vue_app__) {
+          filtered =
+            document.getElementById("app").__vue_app__._instance.proxy
+              .filteredWorksheets;
+        }
+        if (!filtered.length && window.filteredWorksheets) {
+          filtered = window.filteredWorksheets;
+        }
+        if (!filtered.length && Vue && Vue.filteredWorksheets) {
+          filtered = Vue.filteredWorksheets;
+        }
+        try {
+          filtered = filtered.value || filtered;
+        } catch {}
+        if (typeof filtered === "function") filtered = filtered();
+
+        if (!Array.isArray(filtered)) filtered = [];
+
+        while (grid.firstChild) grid.removeChild(grid.firstChild);
+
+        if (!filtered.length) {
+          if (pag) pag.innerHTML = "";
+          if (noMsg) noMsg.style.display = "";
+          return;
+        } else {
+          if (noMsg) noMsg.style.display = "none";
+        }
+
+        let currentPage = 1;
+        const totalPages = Math.ceil(filtered.length / pageSize);
+
+        function renderCards(page) {
+          while (grid.firstChild) grid.removeChild(grid.firstChild);
+          const start = (page - 1) * pageSize;
+          const end = Math.min(filtered.length, page * pageSize);
+          for (let i = start; i < end; ++i) {
+            const w = filtered[i];
+            const col = document.createElement("div");
+            col.className = "col-sm-6 col-lg-4 col-xl-3";
+            col.innerHTML = `
+              <a href="worksheet-detail.html?id=${
+                w.id
+              }" class="text-decoration-none">
                 <div class="card h-100 worksheet-card">
                   <div class="position-relative">
-                    <img :src="worksheet.img" :alt="worksheet.title" class="card-img-top" loading="lazy" />
-                    <div class="hover-caption text-center">{{ worksheet.summary }}</div>
+                    <img src="${w.img}" alt="${
+              w.title
+            }" class="card-img-top" loading="lazy" />
+                    <div class="hover-caption text-center">${
+                      w.summary || ""
+                    }</div>
                   </div>
                   <div class="card-body">
-                    <h6 class="card-title fw-semibold mb-0">{{ worksheet.title }}</h6>
+                    <h6 class="card-title fw-semibold mb-0">${w.title}</h6>
                   </div>
                 </div>
               </a>
-            </div>
-          `,
-          },
-        },
-      }).mount("#app");
+            `;
+            grid.appendChild(col);
+          }
+        }
+
+        function showPage(page) {
+          currentPage = page;
+          renderCards(page);
+          renderPagination();
+          window.scrollTo({ top: grid.offsetTop - 30, behavior: "smooth" });
+        }
+
+        function renderPagination() {
+          if (!pag) return;
+          let html = `<ul class="pagination">`;
+          html += `<li class="page-item${
+            currentPage === 1 ? " disabled" : ""
+          }"><button class="page-link" aria-label="Previous" data-page="${
+            currentPage - 1
+          }" ${
+            currentPage === 1 ? "disabled" : ""
+          }><span>&rarr;</span></button></li>`.replace("&rarr;", "&larr;");
+          let pageArr = [];
+          if (totalPages <= 5) {
+            for (let i = 1; i <= totalPages; ++i) pageArr.push(i);
+          } else {
+            pageArr.push(1);
+            if (currentPage > 3) pageArr.push("...");
+            let start = Math.max(2, currentPage - 1);
+            let end = Math.min(totalPages - 1, currentPage + 1);
+            if (currentPage <= 3) {
+              start = 2;
+              end = 4;
+            } else if (currentPage >= totalPages - 2) {
+              start = totalPages - 3;
+              end = totalPages - 1;
+            }
+            for (let i = start; i <= end; ++i) {
+              if (i > 1 && i < totalPages) pageArr.push(i);
+            }
+            if (end < totalPages - 1) pageArr.push("...");
+            pageArr.push(totalPages);
+          }
+          for (let p of pageArr) {
+            if (p === "...") {
+              html += `<li class="page-item disabled"><span class="page-link">...</span></li>`;
+            } else {
+              html += `<li class="page-item${
+                currentPage === p ? " active" : ""
+              }"><button class="page-link" data-page="${p}">${p}</button></li>`;
+            }
+          }
+          html += `<li class="page-item${
+            currentPage === totalPages ? " disabled" : ""
+          }"><button class="page-link" aria-label="Next" data-page="${
+            currentPage + 1
+          }" ${
+            currentPage === totalPages ? "disabled" : ""
+          }>&rarr;</button></li>`;
+          html += `</ul>`;
+          pag.innerHTML = html;
+          pag.querySelectorAll("button.page-link[data-page]").forEach((btn) => {
+            btn.onclick = function () {
+              const p = parseInt(this.getAttribute("data-page"));
+              if (!isNaN(p) && p >= 1 && p <= totalPages && p !== currentPage)
+                showPage(p);
+            };
+          });
+        }
+
+        showPage(1);
+      }
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -891,5 +1029,37 @@
         }
       });
     </script>
+      <footer class="py-4 bg-dark text-light">
+        <div class="container">
+          <div class="row align-items-start">
+            <div class="col-md-6 mb-3 mb-md-0">
+              <h5 class="mb-3" style="font-weight: 600">
+                Young STEAM Visionaries
+              </h5>
+              <p class="mb-0" style="max-width: 400px; color: #d1d5db">
+                Free worksheets, activities, and personalized support to help
+                young students.
+              </p>
+            </div>
+            <div class="col-md-6 text-md-end">
+              <h5 class="mb-3" style="font-weight: 600">Contact Us</h5>
+              <p class="mb-0" style="color: #d1d5db">
+                <i class="bi bi-envelope-fill me-2"></i>
+                YoungSTEAMVisionaries@gmail.com
+              </p>
+            </div>
+          </div>
+          <hr class="my-4" style="border-color: #bfc9d1; opacity: 0.3" />
+          <div class="row">
+            <div class="col-12 text-center">
+              <small style="color: #d1d5db">
+                &copy; 2025 Young Steam Visionaries. All rights reserved.
+                &nbsp;|&nbsp; Website designed by Kevin Hong
+              </small>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
