--- a/worksheet-detail.html
+++ b/worksheet-detail.html
@@ -63,9 +63,16 @@
   <body>
     <nav class="navbar navbar-light bg-white shadow-sm py-3">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="index.html"
-          >Young STEAM Visionaries</a
-        >
+            <a
+              class="navbar-brand fw-bold me-2 d-flex align-items-center"
+              href="index.html"
+            >
+              <img
+                src="images/logo.png"
+                alt="Young STEAM Visionaries Logo"
+                style="height: 30px; width: auto; margin-right: 0.5rem"
+              />
+            </a>
         <a class="btn btn-outline-primary" href="worksheet.html"
           >Back to Worksheets</a
         >
