--- a/worksheet-detail.html
+++ b/worksheet-detail.html
@@ -384,6 +384,97 @@
             "This worksheet aims to help students strengthen their multiplication skills by matching equations with their correct answers. With a beelike theme, this activity adds fun to math!",
           download: "#",
         },
+        {
+          id: 20,
+          title: "Multiplication Wheel",
+          img: "images/20.png",
+          grades: ["2nd", "3rd"],
+          subjects: ["Math"],
+          games: ["Logic Riddles"],
+          summary:
+            "Solve multiplication problems with a colorful wheel.",
+          description:
+            "Learners use mental math or on a piece of scrap paper to complete multiplication wheels, reinforcing times tables and patterns in a fun and interactive way.",
+          download: "#",
+        },
+        {
+          id: 21,
+          title: "Multiplication Wheel 2",
+          img: "images/21.png",
+          grades: ["2nd", "3rd"],
+          subjects: ["Math"],
+          games: ["Logic Riddles"],
+          summary:
+            "Solve multiplication problems with a colorful wheel.",
+          description:
+            "Learners use mental math or on a piece of scrap paper to complete multiplication wheels, reinforcing times tables and patterns in a fun and interactive way.",
+          download: "#",
+        },
+        {
+          id: 22,
+          title: "Hello Multiplication",
+          img: "images/22.png",
+          grades: ["2nd", "3rd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Sharpen your multiplication skills with a colorful worksheet.",
+          description:
+            "This worksheet helps learners practice two-digit multiplication problems to build speed and accuracy. Perfect for reinforcing multiplication fluency.",
+          download: "#",
+        },
+        {
+          id: 23,
+          title: "Hello Multiplication",
+          img: "images/23.png",
+          grades: ["2nd", "3rd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Sharpen your multiplication skills with a colorful worksheet.",
+          description:
+            "This worksheet helps learners practice two-digit multiplication problems to build speed and accuracy. Perfect for reinforcing multiplication fluency.",
+          download: "#",
+        },
+        {
+          id: 24,
+          title: "Basic Multiplication",
+          img: "images/24.png",
+          grades: ["1st", "2nd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Practice fundamental multiplication facts using single-digit numbers and 10.",
+          description:
+            "This worksheet focuses on building foundational multiplication skills through repeated practice. Great for beginners who are just starting to master their multiplication.",
+          download: "#",
+        },
+        {
+          id: 25,
+          title: "Basic Multiplication 2",
+          img: "images/25.png",
+          grades: ["1st", "2nd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Practice fundamental multiplication facts using single-digit numbers and 10.",
+          description:
+            "This worksheet focuses on building foundational multiplication skills through repeated practice. Great for beginners who are just starting to master their multiplication.",
+          download: "#",
+        },
+        {
+          id: 26,
+          title: "Fun Multiplication",
+          img: "images/26.png",
+          grades: ["1st", "2nd", "3rd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Boost multiplication confidence with a variety of fun practice problems.",
+          description:
+            "This colorful worksheet features a wide range of multiplication problems to help learners apply and strengthen their math",
+          download: "#",
+        },
       ];
 
       createApp({
