--- a/worksheet.html
+++ b/worksheet.html
@@ -535,18 +535,6 @@
               download: "#",
             },
             {
-              id: 3,
-              title: "Visual Subtraction Practice 3",
-              img: "images/3.png",
-              grades: ["Pre-K", "K", "1st"],
-              subjects: ["Math"],
-              games: [],
-              summary: "Practice subtracting numbers with visual clues.",
-              description:
-                "This worksheet helps students practice basic subtraction skills with fun visuals to better understand the fundamentals.",
-              download: "#",
-            },
-            {
               id: 16,
               title: "Count to 100 Challenge 1",
               img: "images/16.png",
@@ -611,18 +599,6 @@
               download: "#",
             },
             {
-              id: 5,
-              title: "Visual Addition Practice 2",
-              img: "images/5.png",
-              grades: ["Pre-K", "K", "1st"],
-              subjects: ["Math"],
-              games: [],
-              summary: "Practice adding numbers with visual clues.",
-              description:
-                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
-              download: "#",
-            },
-            {
               id: 9,
               title: "Keyboard Recognition",
               img: "images/9.png",
@@ -647,18 +623,7 @@
                 "This fun number chart helps kids practice counting and number counting up to 100. People will identify and fill in the missing numbers to reinforce fundamentals.",
               download: "#",
             },
-            {
-              id: 2,
-              title: "Visual Subtraction Practice 2",
-              img: "images/2.png",
-              grades: ["Pre-K", "K", "1st"],
-              subjects: ["Math"],
-              games: [],
-              summary: "Practice subtracting numbers with visual clues.",
-              description:
-                "This worksheet helps students practice basic subtraction skills with fun visuals to better understand the fundamentals.",
-              download: "#",
-            },
+
             {
               id: 8,
               title: "Technology Matching 2",
@@ -697,18 +662,6 @@
               download: "#",
             },
             {
-              id: 6,
-              title: "Visual Addition Practice 3",
-              img: "images/6.png",
-              grades: ["Pre-K", "K", "1st"],
-              subjects: ["Math"],
-              games: [],
-              summary: "Practice adding numbers with visual clues.",
-              description:
-                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
-              download: "#",
-            },
-            {
               id: 11,
               title: "Coding by Color 2",
               img: "images/11.png",
@@ -733,6 +686,147 @@
                 "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
               download: "#",
             },
+        {
+          id: 20,
+          title: "Multiplication Wheel",
+          img: "images/20.png",
+          grades: ["2nd", "3rd"],
+          subjects: ["Math"],
+          games: ["Logic Riddles"],
+          summary:
+            "Solve multiplication problems with a colorful wheel.",
+          description:
+            "Learners use mental math or on a piece of scrap paper to complete multiplication wheels, reinforcing times tables and patterns in a fun and interactive way.",
+          download: "#",
+        },
+            {
+              id: 3,
+              title: "Visual Subtraction Practice 3",
+              img: "images/3.png",
+              grades: ["Pre-K", "K", "1st"],
+              subjects: ["Math"],
+              games: [],
+              summary: "Practice subtracting numbers with visual clues.",
+              description:
+                "This worksheet helps students practice basic subtraction skills with fun visuals to better understand the fundamentals.",
+              download: "#",
+            },
+            {
+              id: 5,
+              title: "Visual Addition Practice 2",
+              img: "images/5.png",
+              grades: ["Pre-K", "K", "1st"],
+              subjects: ["Math"],
+              games: [],
+              summary: "Practice adding numbers with visual clues.",
+              description:
+                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
+              download: "#",
+            },
+
+            {
+              id: 2,
+              title: "Visual Subtraction Practice 2",
+              img: "images/2.png",
+              grades: ["Pre-K", "K", "1st"],
+              subjects: ["Math"],
+              games: [],
+              summary: "Practice subtracting numbers with visual clues.",
+              description:
+                "This worksheet helps students practice basic subtraction skills with fun visuals to better understand the fundamentals.",
+              download: "#",
+            },
+        {
+          id: 21,
+          title: "Multiplication Wheel 2",
+          img: "images/21.png",
+          grades: ["2nd", "3rd"],
+          subjects: ["Math"],
+          games: ["Logic Riddles"],
+          summary:
+            "Solve multiplication problems with a colorful wheel.",
+          description:
+            "Learners use mental math or on a piece of scrap paper to complete multiplication wheels, reinforcing times tables and patterns in a fun and interactive way.",
+          download: "#",
+        },
+        {
+          id: 22,
+          title: "Hello Multiplication",
+          img: "images/22.png",
+          grades: ["2nd", "3rd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Sharpen your multiplication skills with a colorful worksheet.",
+          description:
+            "This worksheet helps learners practice two-digit multiplication problems to build speed and accuracy. Perfect for reinforcing multiplication fluency.",
+          download: "#",
+        },
+        {
+          id: 24,
+          title: "Basic Multiplication",
+          img: "images/24.png",
+          grades: ["1st", "2nd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Practice fundamental multiplication facts using single-digit numbers and 10.",
+          description:
+            "This worksheet focuses on building foundational multiplication skills through repeated practice. Great for beginners who are just starting to master their multiplication.",
+          download: "#",
+        },
+        {
+          id: 26,
+          title: "Fun Multiplication",
+          img: "images/26.png",
+          grades: ["1st", "2nd", "3rd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Boost multiplication confidence with a variety of fun practice problems.",
+          description:
+            "This colorful worksheet features a wide range of multiplication problems to help learners apply and strengthen their math",
+          download: "#",
+        },
+        {
+          id: 25,
+          title: "Basic Multiplication 2",
+          img: "images/25.png",
+          grades: ["1st", "2nd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Practice fundamental multiplication facts using single-digit numbers and 10.",
+          description:
+            "This worksheet focuses on building foundational multiplication skills through repeated practice. Great for beginners who are just starting to master their multiplication.",
+          download: "#",
+        },
+        {
+          id: 23,
+          title: "Hello Multiplication",
+          img: "images/23.png",
+          grades: ["2nd", "3rd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Sharpen your multiplication skills with a colorful worksheet.",
+          description:
+            "This worksheet helps learners practice two-digit multiplication problems to build speed and accuracy. Perfect for reinforcing multiplication fluency.",
+          download: "#",
+        },
+            {
+              id: 6,
+              title: "Visual Addition Practice 3",
+              img: "images/6.png",
+              grades: ["Pre-K", "K", "1st"],
+              subjects: ["Math"],
+              games: [],
+              summary: "Practice adding numbers with visual clues.",
+              description:
+                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
+              download: "#",
+            },
+
           ]);
 
           try {
