--- a/worksheet-detail.html
+++ b/worksheet-detail.html
@@ -475,6 +475,124 @@
             "This colorful worksheet features a wide range of multiplication problems to help learners apply and strengthen their math",
           download: "#",
         },
+        {
+          id: 27,
+          title: "1-Digit Addition",
+          img: "images/28.png",
+          grades: ["K", "1st", "2nd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Boost addition confidence with a variety of fun easy addition practice problems.",
+          description:
+            "This worksheet has basic addition with numbers 0–10. Great for beginners learning and and practicing fundamentals through short, fun equations.",
+          download: "#",
+        },
+        {
+          id: 28,
+          title: "1-Digit Addition 2",
+          img: "images/29.png",
+          grades: ["K", "1st", "2nd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Boost addition confidence with a variety of fun easy addition practice problems.",
+          description:
+            "This worksheet has basic addition with numbers 0–10. Great for beginners learning and and practicing fundamentals through short, fun equations.",
+          download: "#",
+        },
+        {
+          id: 29,
+          title: "Dice Addition",
+          img: "images/27.png",
+          grades: ["Pre-k", "K", "2nd", "3rd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Practice fun addition problems with the use of visual dice as help.",
+          description:
+            "This worksheet combines addition practice with a fun visual, engaging learners and help them build their fundamentals and problem solving.",
+          download: "#",
+        },  
+        {
+          id: 30,
+          title: "2-Digit Addition Workout",
+          img: "images/30.png",
+          grades: ["1st", "2nd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Build confidence by solving 2-digit addition problems.",
+          description:
+            "This worksheet practices adding two-digit numbers, preparing them for more advanced math concepts. This worksheet is ideal for solidifying foundational addition skills",
+          download: "#",
+        },
+        {
+          id: 31,
+          title: "2-Digit Addition Workout",
+          img: "images/31.png",
+          grades: ["1st", "2nd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Build confidence by solving 2-digit addition problems.",
+          description:
+            "This worksheet practices adding two-digit numbers, preparing them for more advanced math concepts. This worksheet is ideal for solidifying foundational addition skills",
+          download: "#",
+        },
+        {
+          id: 32,
+          title: "4-Digit Addition Mastery",
+          img: "images/32.png",
+          grades: ["2nd", "3rd", "4th"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Master multi-digit addition with 4-digit number problems that test students.",
+          description:
+            "This worksheet challenges kids to add large numbers accurately. A perfect resource for preparing for higher-level math while reinforcing strong addition strategies.",
+          download: "#",
+        },
+        {
+          id: 33,
+          title: "4-Digit Addition Mastery",
+          img: "images/33.png",
+          grades: ["2nd", "3rd", "4th"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Master multi-digit addition with 4-digit number problems that test students.",
+          description:
+            "This worksheet challenges kids to add large numbers accurately. A perfect resource for preparing for higher-level math while reinforcing strong addition strategies.",
+          download: "#",
+        },
+        {
+          id: 34,
+          title: "3-Digit Addition Challenge",
+          img: "images/34.png",
+          grades: ["2nd", "3rd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Tackle 3-digit addition problems that boost mental math and column alignment skills.",
+          description:
+            "This worksheet focuses on adding three-digit numbers with step-by-step practice. It’s a great way for students to learn carrying over and improve their calculation accuracy. How fast can you finish it?",
+          download: "#",
+        },
+        {
+          id: 34,
+          title: "3-Digit Addition Challenge",
+          img: "images/34.png",
+          grades: ["2nd", "3rd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Tackle 3-digit addition problems that boost mental math and column alignment skills.",
+          description:
+            "This worksheet focuses on adding three-digit numbers with step-by-step practice. It’s a great way for students to learn carrying over and improve their calculation accuracy. How fast can you finish it?",
+          download: "#",
+        },
+
       ];
 
       createApp({
