--- a/worksheet-detail.html
+++ b/worksheet-detail.html
@@ -580,9 +580,9 @@
           download: "#",
         },
         {
-          id: 34,
-          title: "3-Digit Addition Challenge",
-          img: "images/34.png",
+          id: 35,
+          title: "3-Digit Addition Challenge 2",
+          img: "images/35.png",
           grades: ["2nd", "3rd"],
           subjects: ["Math"],
           games: [],
@@ -592,7 +592,110 @@
             "This worksheet focuses on adding three-digit numbers with step-by-step practice. It’s a great way for students to learn carrying over and improve their calculation accuracy. How fast can you finish it?",
           download: "#",
         },
-
+        {
+          id: 36,
+          title: "1-Digit Subtraction",
+          img: "images/36.png",
+          grades: ["K", "1st", "2nd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Boost subtraction confidence with a variety of fun easy subtraction practice problems.",
+          description:
+            "This worksheet has basic subtraction with basic numbers. Great for beginners learning and and practicing fundamentals through short, fun equations.",
+          download: "#",
+        },
+        {
+          id: 37,
+          title: "1-Digit Subtraction 2",
+          img: "images/37.png",
+          grades: ["K", "1st", "2nd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Boost subtraction confidence with a variety of fun easy subtraction practice problems.",
+          description:
+            "This worksheet has basic subtraction with basic numbers. Great for beginners learning and and practicing fundamentals through short, fun equations.",
+          download: "#",
+        },
+        {
+          id: 38,
+          title: "2-Digit Subtraction Workout",
+          img: "images/38.png",
+          grades: ["1st", "2nd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Build confidence by solving 2-digit subtraction problems.",
+          description:
+            "This worksheet practices subtracting two-digit numbers, preparing them for more advanced math concepts. This worksheet is ideal for solidifying foundational subtraction skills",
+          download: "#",
+        },
+        {
+          id: 39,
+          title: "2-Digit Subtraction Workout 2",
+          img: "images/39.png",
+          grades: ["1st", "2nd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Build confidence by solving 2-digit subtraction problems.",
+          description:
+            "This worksheet practices subtracting two-digit numbers, preparing them for more advanced math concepts. This worksheet is ideal for solidifying foundational subtraction skills",
+          download: "#",
+        },
+        {
+          id: 40,
+          title: "4-Digit Subtraction Mastery",
+          img: "images/42.png",
+          grades: ["2nd", "3rd", "4th"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Master multi-digit subtraction with 4-digit number problems that test students.",
+          description:
+            "This worksheet challenges kids to subtract large numbers accurately. A perfect resource for preparing for higher-level math while reinforcing strong subtraction strategies.",
+          download: "#",
+        },
+        {
+          id: 41,
+          title: "4-Digit Subtraction Mastery",
+          img: "images/43.png",
+          grades: ["2nd", "3rd", "4th"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Master multi-digit subtraction with 4-digit number problems that test students.",
+          description:
+            "This worksheet challenges kids to subtract large numbers accurately. A perfect resource for preparing for higher-level math while reinforcing strong subtraction strategies.",
+          download: "#",
+        },
+        {
+          id: 42,
+          title: "3-Digit Subtraction Challenge",
+          img: "images/40.png",
+          grades: ["2nd", "3rd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Tackle 3-digit subtraction problems that boost mental math and column alignment skills.",
+          description:
+            "This worksheet focuses on subtracting three-digit numbers with step-by-step practice. It’s a great way for students to learn carrying over and improve their calculation accuracy. How fast can you finish it?",
+          download: "#",
+        },
+        {
+          id: 43,
+          title: "3-Digit Subtraction Challenge",
+          img: "images/41.png",
+          grades: ["2nd", "3rd"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Tackle 3-digit subtraction problems that boost mental math and column alignment skills.",
+          description:
+            "This worksheet focuses on subtracting three-digit numbers with step-by-step practice. It’s a great way for students to learn carrying over and improve their calculation accuracy. How fast can you finish it?",
+          download: "#",
+        },
       ];
 
       createApp({
